recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: not found: value step
		current(step)
                        ^Tree:11: error: not found: value step
		current(step)
                        ^