recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if(steps!=0){
		current(step)
		avance(length)
		droite(angle)
		tree(steps-1,shrink*length,angle,shrink)
		gauche(2*angle)
		tree(steps-1,shrink*length,angle,shrink)
		droite(angle)
		current(step)
		recule(length)
	}
}

